--- a/playground/dancing/dancer.css
+++ b/playground/dancing/dancer.css
@@ -6,45 +6,64 @@ body {
     font-size:100%;
     color:#eee;
 }
-header, audio, ul, #loading {
-    width: 40%;
-    display: block;
-    margin: 2% auto;
-    text-align:center;
-}
-h1 {
-    
-}
+header {width:96%; margin: 2% auto; text-align:center; overflow:hidden;}
+header section, #loading, .values {width:33%;}
+header section {float:left;}
+.values {float:right;}
+
+ul {width:96%;}
 ul li {
     list-style:none; float:left;
-    width:40px; height:40px;
-    margin: 5%;
-    background-color: hsla(0,70%,50%,1);
-    background-image:-webkit-radial-gradient(center, rgba(0,0,0,0), rgba(0,0,0,1));
-    border-radius:20px;
-    box-shadow: inset 1px 1px 5px rgba(255,255,255,0.2), 1px 1px 5px rgba(0,0,0,0.8);
+    width:80px; height:80px;
+    margin: 1%;
+    background-color: hsla(0,70%,50%,0.3);
+//    background-image:-webkit-radial-gradient(center, rgba(0,0,0,0), rgba(0,0,0,1));
+    border-radius:60px;
+    border:20px solid hsla(0,70%,50%,0.5);
+//    box-shadow: inset 1px 1px 5px rgba(255,255,255,0.2), 1px 1px 5px rgba(0,0,0,0.8);
 }
 /*this would be easier with SASS*/
-ul li:nth-child(20n-18) {background-color:hsla(20,70%,50%,1);}
-ul li:nth-child(20n-17) {background-color:hsla(40,70%,50%,1);}
-ul li:nth-child(20n-16) {background-color:hsla(60,70%,50%,1);}
-ul li:nth-child(20n-15) {background-color:hsla(80,70%,50%,1);}
-ul li:nth-child(20n-14) {background-color:hsla(100,70%,50%,1);}
-ul li:nth-child(20n-13) {background-color:hsla(120,70%,50%,1);}
-ul li:nth-child(20n-12) {background-color:hsla(140,70%,50%,1);}
-ul li:nth-child(20n-11) {background-color:hsla(160,70%,50%,1);}
-ul li:nth-child(20n-10) {background-color:hsla(180,70%,50%,1);}
-ul li:nth-child(20n-9) {background-color:hsla(200,70%,50%,1);}
-ul li:nth-child(20n-8) {background-color:hsla(220,70%,50%,1);}
-ul li:nth-child(20n-7) {background-color:hsla(240,70%,50%,1);}
-ul li:nth-child(20n-6) {background-color:hsla(260,70%,50%,1);}
-ul li:nth-child(20n-5) {background-color:hsla(280,70%,50%,1);}
-ul li:nth-child(20n-4) {background-color:hsla(300,70%,50%,1);}
-ul li:nth-child(20n-3) {background-color:hsla(320,70%,50%,1);}
-ul li:nth-child(20n-2) {background-color:hsla(340,70%,50%,1);}
+ul li:nth-child(2) {background-color:hsla(9,70%,50%,0.8); border-color:hsla(8,70%,50%,0.5);}
+ul li:nth-child(3) {background-color:hsla(18,70%,50%,0.8); border-color:hsla(16,70%,50%,0.4); }
+ul li:nth-child(4) {background-color:hsla(27,70%,50%,0.8); border-color:hsla(24,70%,50%,0.4); }
+ul li:nth-child(5) {background-color:hsla(36,70%,50%,0.8); border-color:hsla(32,70%,50%,0.4); }
+ul li:nth-child(6) {background-color:hsla(45,70%,50%,0.8); border-color:hsla(40,70%,50%,0.4); }
+ul li:nth-child(7) {background-color:hsla(54,70%,50%,0.8); border-color:hsla(48,70%,50%,0.4); }
+ul li:nth-child(8) {background-color:hsla(63,70%,50%,0.8); border-color:hsla(56,70%,50%,0.4); }
+ul li:nth-child(9) {background-color:hsla(72,70%,50%,0.8); border-color:hsla(64,70%,50%,0.4); }
+ul li:nth-child(10) {background-color:hsla(81,70%,50%,0.8); border-color:hsla(72,70%,50%,0.4); }
+ul li:nth-child(11) {background-color:hsla(90,70%,50%,0.8); border-color:hsla(80,70%,50%,0.4); }
+ul li:nth-child(12) {background-color:hsla(99,70%,50%,0.8); border-color:hsla(88,70%,50%,0.4); }
+ul li:nth-child(13) {background-color:hsla(108,70%,50%,0.8); border-color:hsla(96,70%,50%,0.4); }
+ul li:nth-child(14) {background-color:hsla(117,70%,50%,0.8); border-color:hsla(104,70%,50%,0.4);}
+ul li:nth-child(15) {background-color:hsla(126,70%,50%,0.8); border-color:hsla(112,70%,50%,0.4);}
+ul li:nth-child(16) {background-color:hsla(135,70%,50%,0.8); border-color:hsla(120,70%,50%,0.4);}
+ul li:nth-child(17) {background-color:hsla(144,70%,50%,0.8); border-color:hsla(128,70%,50%,0.4);}
+ul li:nth-child(18) {background-color:hsla(153,70%,50%,0.8); border-color:hsla(136,70%,50%,0.4);}
+ul li:nth-child(19) {background-color:hsla(162,70%,50%,0.8); border-color:hsla(144,70%,50%,0.4);}
+ul li:nth-child(20) {background-color:hsla(171,70%,50%,0.8); border-color:hsla(152,70%,50%,0.4);}
+ul li:nth-child(21) {background-color:hsla(180,70%,50%,0.8); border-color:hsla(160,70%,50%,0.4);}
+ul li:nth-child(22) {background-color:hsla(189,70%,50%,0.8); border-color:hsla(168,70%,50%,0.4);}
+ul li:nth-child(23) {background-color:hsla(198,70%,50%,0.8); border-color:hsla(176,70%,50%,0.4);}
+ul li:nth-child(24) {background-color:hsla(207,70%,50%,0.8); border-color:hsla(184,70%,50%,0.4);}
+ul li:nth-child(25) {background-color:hsla(216,70%,50%,0.8); border-color:hsla(192,70%,50%,0.4);}
+ul li:nth-child(26) {background-color:hsla(225,70%,50%,0.8); border-color:hsla(200,70%,50%,0.4);}
+ul li:nth-child(27) {background-color:hsla(234,70%,50%,0.8); border-color:hsla(208,70%,50%,0.4);}
+ul li:nth-child(28) {background-color:hsla(243,70%,50%,0.8); border-color:hsla(216,70%,50%,0.4);}
+ul li:nth-child(29) {background-color:hsla(252,70%,50%,0.8); border-color:hsla(224,70%,50%,0.4);}
+ul li:nth-child(30) {background-color:hsla(261,70%,50%,0.8); border-color:hsla(232,70%,50%,0.4);}
+ul li:nth-child(31) {background-color:hsla(270,70%,50%,0.8); border-color:hsla(240,70%,50%,0.4);}
+ul li:nth-child(32) {background-color:hsla(279,70%,50%,0.8); border-color:hsla(248,70%,50%,0.4);}
+ul li:nth-child(33) {background-color:hsla(288,70%,50%,0.8); border-color:hsla(256,70%,50%,0.4);}
+ul li:nth-child(34) {background-color:hsla(297,70%,50%,0.8); border-color:hsla(264,70%,50%,0.4);}
+ul li:nth-child(35) {background-color:hsla(306,70%,50%,0.8); border-color:hsla(272,70%,50%,0.4);}
+ul li:nth-child(36) {background-color:hsla(315,70%,50%,0.8); border-color:hsla(280,70%,50%,0.4);}
+ul li:nth-child(37) {background-color:hsla(324,70%,50%,0.8); border-color:hsla(288,70%,50%,0.4);}
+ul li:nth-child(38) {background-color:hsla(333,70%,50%,0.8); border-color:hsla(296,70%,50%,0.4);}
+ul li:nth-child(39) {background-color:hsla(342,70%,50%,0.8); border-color:hsla(304,70%,50%,0.4);}
+ul li:nth-child(40) {background-color:hsla(351,70%,50%,0.8); border-color:hsla(312,70%,50%,0.4);}
 
 #loading {
-    width: 20%;
     padding: 1%;
     border-radius: 10px;
     opacity: 0.9;
@@ -52,16 +71,13 @@ ul li:nth-child(20n-2) {background-color:hsla(340,70%,50%,1);}
     text-align: center;
 }
 
-
-
-
 #loading a {
     color: #fff;
     text-shadow: 0 0 10px #fff;
     text-decoration: none;
 }
 
-#loading p{
+#loading p {
     color: #fff;
     font-size: 18px;
 }
